FrontMatter/needupdate message for page

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -46,7 +46,7 @@ layout: default
     {% endif %}
 
     {% if page.needupdate %}
-      {% include important.html content="Данный раздел находится в процессе написания" %}
+      {% include important.html content="В страницу запланированы правки." %}
     {% endif %}
 
    {{content}}
