--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -45,6 +45,11 @@ layout: default
 
     {% endif %}
 
+    {% assign stripped_content = page.content | strip_newlines %}
+    {% if stripped_content == "" %}
+      {% include important.html content="Страница находится в процессе написания." %}
+    {% endif %}
+
     {% if page.needupdate %}
       {% include important.html content="В страницу запланированы правки." %}
     {% endif %}
