--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -575,13 +575,13 @@ a[data-toggle] {
     font-size:120%;
     color: #808080;
     margin:20px 0px 20px 0px;
-    border-left: 5px solid #ED1951;
+    border-left: 5px solid #808080;
     padding-left: 10px;
 
 }
 
 .summary:before {
-    content: "Summary: ";
+    content: "Аннотация: ";
     font-weight: bold;
 }
 
