Donation window and pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,6 +74,7 @@
     {% include yandex-metrika.html %}
 </head>
 <body>
+{% include modal-donate.html %}
 {% include topnav.html %}
 <!-- Page Content -->
 <div class="container">
