--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,9 @@
 <!-- most color styles are extracted out to here -->
 <link rel="stylesheet" href="/css/theme-blue.css">
 
+<!-- Modal donation window -->
+<link rel="stylesheet" href="/css/modal-donation.css">
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
