Modal headers changed

--- a/_includes/modal-donate.html
+++ b/_includes/modal-donate.html
@@ -3,14 +3,14 @@
   <div class="modal-content">
     <div class="modal-header">
       <span class="close">&times;</span>
-      <h2>Помощь проекту</h2>
+      <span style="font-size:200%; font-weight:bold">Помощь проекту</span>
     </div>
     <div class="modal-body">
       <p>В моем проекте отсутствует реклама.  Пожалуйста, поддержите
       проекте.  Все способы поддержки доступны на странице <a href="/donation.html">поддержки</a>.</p>
     </div>
     <div class="modal-footer">
-      <h2>Спасибо</h2>
+      <span style="font-size:200%; font-weight:bold">Спасибо</span>
     </div>
   </div> 
 </div>
