--- a/_includes/modal-donate.html
+++ b/_includes/modal-donate.html
@@ -7,7 +7,7 @@
     </div>
     <div class="modal-body">
       <p>В моем проекте отсутствует реклама.  Пожалуйста, поддержите
-      проекте.  Все способы поддержки доступны на странице <a href="/donation.html">поддержки</a>.</p>
+      проект.  Все способы поддержки доступны на странице <a href="/donation.html">поддержки</a>.</p>
     </div>
     <div class="modal-footer">
       <span style="font-size:200%; font-weight:bold">Спасибо</span>
